# fde-playbook

./: README.md  ai-and-data-governance.md  decision-driven-engineer.md  discovery-toolkit.md  dsa-mastry-pattern.md  eu-ai-act.md  eval-driven-development.md  glossary.md  governance-playbook.md  interview-drills.md  llm-slm.md  prep-plan-4-week.md  pyproject.toml  reference-architecture.md
.claude/: settings.json
case-studies/: README.md  ai-powered-soc.md  clinical-doc-ai.md  corporate-legal-ai.md  disruption-intelligence-ai.md  drug-safety-signal-detection.md  grid-intelligence-platform.md  multi-modal-fraud-detection.md  shadow-ai.md  state-human-services-agency.md  ux-research.md
coding/: a2a_coding.py  ai_engineer.py  crewai.py  eu-ai-act.py  gdpr.py  google-adk.py  langGraph.py  langchain.py  llm-metrics.py  mcp_coding.py  ocr_code.py  openai_sdk.py  openclaw.py  rag.py
databases/: database-setup-guide.md  db-performance.md  nosql-db.md  relational-database.md
fde-on-field/: fintect-ag.md
notes/: 01_fde_role_persona_and_mission.md  02_advanced_sql_and_query_tuning.md  03_data_modeling_for_reality.md  04_medallion_architecture.md  05_distributed_computing_spark_ray.md  06_data_quality_and_observability.md  07_gcp_networking_vpc_and_security.md  08_gke_kubernetes_on_gcp.md  09_bigquery_data_architecture.md  10_vpc_service_controls_data_exfiltration.md  11_terraform_iac_for_fde.md  12_consulting_mindset_and_frameworks.md  13_discovery_checklist_and_scoping.md  14_google_adk_multi_agent_orchestration.md  15_llm_evaluation_inner_outer_loop.md  README.md  (+6 more)
(+49 files in other folders)
