[project]
name = "fde-playbook"
version = "0.1.0"
description = "Forward-Deployed Engineer prep: reference scripts, capstones, and tests"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
# Everything runs fully offline by default. Install this extra only to wire
# a capstone's --provider live mode to a real Claude API / GCP BigQuery.
live = ["anthropic>=0.40", "google-cloud-bigquery>=3.25"]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["capstones*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
